2305 proper solution debugging